fix header style on small screens

--- a/src/Header/Header.css
+++ b/src/Header/Header.css
@@ -29,3 +29,7 @@
   border: 0;
   border-bottom: 1px solid grey;
 }
+
+.searchBox:focus {
+  outline: none;
+}
